# Cliniq

./: .env.example  .gitignore  README.md  cliniq_data.db  pyproject.toml  requirements.txt
src/my_package/: database.py  streamlit_app.py  vector_store.py
tests/: test_main.py
